--- a/css/main-brown.css
+++ b/css/main-brown.css
@@ -17,6 +17,8 @@ html, body{
     color: #421e00;
 
     font-size: 1rem;
+
+    padding-bottom: 50px; /* adjust the value as needed */
 }
 
 
@@ -483,9 +485,62 @@ svg.svg-coffee-color path {
 
 #changeThemeBlack {
     background-color: #6F4E37;
+    margin-right: 5px;
 }
 
 #changeThemeBrown {
   margin-right: 20px;
   background-color: #6F4E37;
+}
+
+.bottom-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.fixed {
+    position: fixed;
+    bottom: 0;
+}
+
+.bottom-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px; /* adjust the height as needed */
+    background-color: #6F4E37; /* adjust the color as needed */
+    text-align: center;
+    line-height: 30px;
+    z-index: 999; /* set a high z-index to make sure the element stays on top */
+    opacity: 0.8;
+}
+
+.theme-buttons-container {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding-right: 10px; /* add some padding for spacing */
+}
+
+.theme-buttons-container button {
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin-left: 5px; /* add some margin between buttons */
+}
+  
+.theme-buttons-container svg {
+    width: 100%;
+    height: 100%;
+}
+
+.themes-color {
+    margin-right: 10px;
+    align-items: center;
+    color: #ffffff;
 }
