--- a/css/main-brown.css
+++ b/css/main-brown.css
@@ -451,6 +451,16 @@ svg.bi-arrow-left-right path {
     fill: #421e00;
 }
 
+.cls-1:hover {
+    fill: #ffffff;
+    transition: all 0.2s ease-in-out;
+}
+
+.discord-color:hover path {
+    fill: #ffffff;
+    transition: all 0.2s ease-in-out;
+}
+
 .fee-data {
     color: #ffd95b;
 }
