--- a/css/main-black.css
+++ b/css/main-black.css
@@ -551,3 +551,33 @@ svg.svg-coffee-color path {
     color: #ffffff;
 }
 
+.developed-by-container {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding-left: 10px; /* add some padding for spacing */
+    margin-bottom: 5px; /* add some margin from the bottom bar */
+}
+
+.developed-by-container p {
+    margin: 0;
+    color: #1b1b1b;
+}
+
+.alih-color {
+    color: #1b1b1b;
+}
+
+.theguruasia-color {
+    color: #1b1b1b;
+}
+
+.alih-color:hover {
+    color: #ffffff;
+    transition: all 4.0s ease-out;
+}
+
+.theguruasia-color:hover {
+    color: #ffffff;
+    transition: all 4.0s ease-out;
+}
