--- a/css/main-brown.css
+++ b/css/main-brown.css
@@ -638,6 +638,7 @@ svg.svg-coffee-color path {
     text-align: center;
     font-weight: bold;
     color: #421e00;
+    font-size: 20px;
 }
 
 .popup-by-container-text {
