--- a/css/main-black.css
+++ b/css/main-black.css
@@ -638,6 +638,7 @@ svg.svg-coffee-color path {
     text-align: center;
     font-weight: bold;
     color: #000000;
+    font-size: 20px;
 }
   
 .popup-by-container-text {
