--- a/css/main-black.css
+++ b/css/main-black.css
@@ -532,18 +532,32 @@ svg.svg-coffee-color:hover path {
     padding: 5px;
 }
 
-.popup-by-container > div {
+.developed-by-container,
+.popup-by-container-hive,
+.popup-by-container-engine,
+.theme-buttons-container {
+    flex-basis: 100%;
+}
+
+.popup-by-container-hive > div,
+.popup-by-container-engine > div {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
-  
+
+.popup-by-container-hive button,
+.popup-by-container-engine button {
+    margin-left: 5px;
+}
+
 .theme-buttons-container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     padding-right: 10px;
+    flex-basis: auto;
 }
 
 .theme-buttons-container button {
@@ -564,23 +578,50 @@ svg.svg-coffee-color:hover path {
     color: #ffffff;
 }
 
-@media (max-width: 480px) {
-    .popup-by-container {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
 @media (max-width: 767px) {
     .bottom-bar {
         flex-direction: column;
         align-items: center;
     }
+    .popup-by-container-hive,
+    .popup-by-container-engine {
+        flex-basis: 100%;
+        text-align: center;
+    }
+    .developed-by-container {
+        text-align: center;
+        flex-basis: 100%;
+    }
 }
-  
-.developed-by-container {
-    padding-left: 10px;
-    margin-bottom: 5px;
+
+@media (min-width: 768px) {
+    .bottom-bar {
+      flex-wrap: nowrap;
+    }
+    .popup-by-container-hive > div {
+      justify-content: flex-end;
+      margin-right: 10px; /* Add a small margin to the left */
+    }
+    .popup-by-container-hive {
+      flex-basis: 50%;
+      text-align: right;
+    }
+    .popup-by-container-engine > div {
+      justify-content: flex-start;
+      margin-left: 10px; /* Add a small margin to the left */
+    }
+    .popup-by-container-engine {
+      flex-basis: 50%;
+      text-align: left;
+    }
+    .developed-by-container {
+      text-align: left;
+      flex-basis: 50%;
+      padding-left: 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 }
   
 .developed-by-container p {
