--- a/css/main-brown.css
+++ b/css/main-brown.css
@@ -575,7 +575,7 @@ svg.svg-coffee-color:hover path {
 .themes-color {
     margin-right: 10px;
     align-items: center;
-    color: #ffffff;
+    color: #e0d4ca;
 }
 
 @media (max-width: 767px) {
