--- a/css/main-black.css
+++ b/css/main-black.css
@@ -501,13 +501,13 @@ svg.svg-coffee-color:hover path {
 }
 
 #changeThemeBlack {
-    background-color: #575757;
+    background-color: #1e1e1e;
     margin-right: 5px;
 }
 
 #changeThemeBrown {
   margin-right: 20px;
-  background-color: #575757;
+  background-color: #1e1e1e;
 }
 
 .fixed {
@@ -520,7 +520,7 @@ svg.svg-coffee-color:hover path {
     bottom: 0;
     width: 100%;
     height: auto;
-    background-color: #575757;
+    background-color: #1e1e1e;
     text-align: center;
     line-height: 30px;
     z-index: 999;
@@ -626,25 +626,27 @@ svg.svg-coffee-color:hover path {
   
 .developed-by-container p {
     margin: 0;
-    color: #1b1b1b;
+    color: #c5c5c5;
 }  
 
 .alih-color {
-    color: #1b1b1b;
+    color: #c5c5c5;
+    transition: all 1.0s ease-out;
 }
 
 .theguruasia-color {
-    color: #1b1b1b;
+    color: #c5c5c5;
+    transition: all 1.0s ease-out;
 }
 
 .alih-color:hover {
-    color: #ffffff;
-    transition: all 4.0s ease-out;
+    color: #009ee7;
+    transition: all 1.0s ease-out;
 }
 
 .theguruasia-color:hover {
-    color: #ffffff;
-    transition: all 4.0s ease-out;
+    color: #009ee7;
+    transition: all 1.0s ease-out;
 }
 
 .popup-link {
@@ -653,6 +655,7 @@ svg.svg-coffee-color:hover path {
     color: #ffd95b;
     text-decoration: underline;
     cursor: pointer;
+    transition: all 1.0s ease-out;
 }
 
 #popup-container-hive {
@@ -688,22 +691,13 @@ svg.svg-coffee-color:hover path {
     width: 100%;
 }
   
-.svg.close-button-color path {
-    fill: #727272;
-    transition: fill 0.3s ease;
-}
-  
-.svg.close-button-color:hover path {
-    fill: #000000;
-    transition: fill 0.3s ease;
-}
-  
 #close-button-hive {
     position: absolute;
     top: 5px;
     right: 5px;
     cursor: pointer;
     border: none;
+    transition: fill 0.3s ease;
 }
 
 #close-button-hive:hover .close-button-color path {
@@ -768,7 +762,8 @@ svg.svg-coffee-color:hover path {
     top: 5px;
     right: 5px;
     cursor: pointer;
-    border: none;
+    border: none;  
+    transition: fill 0.3s ease;  
 }
 
 #close-button-engine:hover .close-button-color path {
