--- a/css/main-brown.css
+++ b/css/main-brown.css
@@ -1,188 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
-
-
 html, body{
-
     /*font-family: 'Source Sans Pro', sans-serif;*/
     /*font-family: 'Trebuchet MS', Tahoma, Verdana, sans-serif;*/
     /*font-family: 'Source Sans Pro', 'Arial', 'Helvetica', 'Tahoma', 'Verdana', sans-serif;*/
-
     font-family: 'Segoe UI', 'Ubuntu', 'Helvetica Neue', 'Oxygen', 'Roboto', 'Open Sans', 'Source Sans Pro', sans-serif;
-
     font-weight: 400;
-
     background-color: #e0d4ca;
-
     color: #421e00;
-
     font-size: 1rem;
-
     padding-bottom: 50px; /* adjust the value as needed */
 }
 
-
 img {
-
     max-width: 270px;
-
     max-height: 270px;
-
 }
 
-
-
 #logo {
-
     width: 70px;
-
     height: 70px;
-
     transition: all 0.2s ease-in-out;
 }
 
-
-
 .box {
-
-  padding: 8px 16px;
-
-  background-color: #3b2f2f;
-
+    padding: 8px 16px;
+    background-color: #3b2f2f;
 }
 
-
-
-.ops{
-
-  width: 25px;
-
-  height: 25px;
-
-  margin-left: 8px;
-
-  margin-right: 5px;
-
+.ops {
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+    margin-right: 5px;
 }
-
-
 
 .i {
-
     font-style: italic;
-
 }
-
-
 
 .c {
-
     color: #E33C3A;
-
 }
-
-
 
 .r {
-
     border-radius: 30%;
-
 }
-
-
 
 .bg {
-
     background-color: #6F4E37;
-
 }
-
-
 
 .input {
-
     /* width: unset; */
-
     padding: 0.375rem 0.75rem;
-
     font-size: 1.15rem;
-
 }
-
-
 
 .btn-sm {
-
     border: none !important;
-
 }
-
-
 
 .input:focus, .btn:focus, .btn-sm:focus {
-
     outline: none;
-
     box-shadow: none;
-
 }
-
-
 
 a {
-
     text-decoration: unset;
-
 }
-
-
 
 .btn, select, .pointer {
-
     font-size: 1.15rem;
-
     cursor: pointer;
-
 }
-
-
 
 #usymbol, .a {
-
     border: none;
-
     border-top-left-radius: 15px;
-
     border-bottom-left-radius: 15px;
-
     border-top-right-radius: 0;
-
     border-bottom-right-radius: 0;
-
 }
-
-
 
 #username, .b {
-
     border: none;
-
     border-top-left-radius: 0;
-
     border-bottom-left-radius: 0;
-
     border-top-right-radius: 15px;
-
     border-bottom-right-radius: 15px;
-
 }
 
-
-
 .form-select {
-
     padding: 0.375rem 2.25rem 0.375rem 0.75rem;
-
 }
 
 .f {
@@ -190,82 +100,44 @@ a {
     border-radius: 15px;
 }
 
-
-
 .tb-div {
-
     overflow-x: auto;
-
     border-radius: 15px;
-
 }
-
-
 
 .htable {
-
     width: 100%;
-
     border-collapse: collapse;
-
 }
-
-
 
 .htable td, .htable th {
-
     padding: 6px 13px;
-
 }
-
-
 
 .htable tr:nth-child(even) {
-
     background-color: #d3bcac;
-
 }
-
-
 
 .htable tr:hover {
-
     background-color: #d3bcac;
-
 }
 
-
-
 @media (max-width: 1120px) { 
-
     .mbody {
-
         flex-wrap: wrap;
-
     }
-
     .card {
-
         width: initial!important;
-
     }
-
     #htable td, #htable th {
-
         padding: 2px 8px;
-
     }
-
 }
 
 @media (max-width: 990px) { 
-
     .card {
-
         width: 100%!important;
-
     }
-
 }
 
 p.fee {
@@ -407,6 +279,7 @@ svg.bi-arrow-left-right path {
     background-color: #421e00;
     border-color: #421e00;
     transition: background-color 0.5s ease-in-out;
+    height: 35px !important;
 }
 
 .btn-swap:hover {
@@ -833,4 +706,80 @@ tr:hover .node-url {
 #popup-button-engine:hover {
     color: #00e065;
     transition: fill 0.3s ease;
+}
+
+.column-one-scale {
+    width: 30%;
+}
+
+.column-two-scale {
+    width: 40%;
+}
+
+.column-three-scale {
+    width: 30%;
+}
+
+.input-div-change {
+    width: 100%;
+}
+
+.input-group-append {
+    display: flex;
+}
+
+.select-change {
+    border: none !important;
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    border-top-right-radius: 25px !important;
+    border-bottom-right-radius: 25px !important;
+    width: auto;
+    flex: 1;
+    height: 35px !important;
+}
+
+.input-change {
+    border: none !important;
+    border-top-left-radius: 25px !important;
+    border-bottom-left-radius: 25px !important;
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    width: 100%;
+    height: 35px !important;
+}
+
+.load-change {    
+    width: 100%;
+    height: 35px !important;
+}
+
+.custom-box {
+    height: 30px; /* Adjust the height value as desired */
+    background-color: #8d603b;
+    padding: 0px;
+    border-radius: 25px !important;
+}
+  
+.custom-box .form-check-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.custom-box .ops {
+    height: 20px;
+    width: auto; /* Adjust the width value as desired */
+}
+
+.label-scale {
+    padding-right: 10px;
+}
+
+.btn-scale {
+    width: 100% !important;
+}
+
+.text-success {
+    color: #ffd95b !important;
 }
